# android-cmake

./: .cproject  .project  AndroidCommon.cmake  CMakeLists.txt  func.c  main.cpp
